TEST_PROGRAMS/INVALID/theo_szymkowiak/invalid3.min
# WILL FAIL BECAUSE MISSING ;

var x: int;

while x do
  print "test"
done

